Fixed overflow issue
Just changed from vw to % as it gave an overflow issue, which is a big no no

--- a/css/LandingPage.css
+++ b/css/LandingPage.css
@@ -3,7 +3,7 @@
 /* ===== Top Section - Image with text ===== */
 .top-background-section {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: center;
